examples/test/testpolicy8658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8658
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key48: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
          key45: value39
          key39: value9
      podSelector:
        matchLabels:
          key44: value13
          key34: value48
